<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--titles -->
    <string name="app_name">Spotify Streamer</string>
    <string name="top_ten_tracks">Top 10 Tracks</string>
    <string name="search_hint">Search artists</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_track_player">Track Player</string>

    <!-- placeholder strings -->
    <string name="artist_placeholder">Artist</string>
    <string name="track_placeholder">Track</string>
    <string name="album_placeholder">Album</string>
    <string name="empty_artist_list">Search for an artist</string>

    <!--string for formatting track duration-->
    <string name="format_track_duration">
        <xliff:g id="minutes">%02d</xliff:g>
        :
        <xliff:g id="seconds">%02d</xliff:g>
    </string>

    <string name="action_share">Share Track</string>

    <!-- strings for settings activity-->
    <!-- strings for the preference on showing notification controls-->
    <string name="pref_show_notification_controls_key" translatable="false">showNotificationControls</string>
    <string name="pref_show_notification_controls_label">Show notification controls on lock screen</string>
    <string name="pref_show_notification_controls_default" translatable="false">True</string>
    <string name="pref_show_notification_controls_true">Enabled</string>
    <string name="pref_show_notification_controls_false">Disabled</string>
    <!--strings for the preference on country code -->
    <string name="pref_country_code_key" translatable="false">countryCode</string>
    <string name="pref_country_code_label">Country Code</string>
    <string name="pref_country_code_default">US</string>

    <!--media player notification strings-->
    <string name="now_playing">Now playing...</string>
    <string name="msg_previous">Previous</string>
    <string name="msg_pause">Pause</string>
    <string name="msg_resume">Resume</string>
    <string name="msg_next">Next</string>
</resources>
