<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pref_general">

    <CheckBoxPreference
        android:key="@string/pref_show_notification_controls_key"
        android:title="@string/pref_show_notification_controls_label"
        android:defaultValue="@string/pref_show_notification_controls_default"
        android:summaryOff="@string/pref_show_notification_controls_false"
        android:summaryOn="@string/pref_show_notification_controls_true"
        />

    <EditTextPreference
        android:key="@string/pref_country_code_key"
        android:title="@string/pref_country_code_label"
        android:defaultValue="@string/pref_country_code_default"
        android:inputType="text"
        android:singleLine="true"
        />

</PreferenceScreen>
